Fixed bugs and layout issues.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1023,7 +1023,7 @@ user-select: none;
 
 .dropdown-menu
 {
-  z-index: 1020;
+  z-index: 1019;
   border-radius: 0px;
 }
 
